[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
mdns = "2.0"
alsa = { version = "0.7", optional = true }
hyper = "1.0"
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"
mdns-sd = "0.13.11"
rustfft = "6.4.0"
chrono = "0.4.41"
