[package]
name = "test-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6.4.0"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
